syntax = "proto3";

package proxyservice;
option go_package = "pb/proxyservice";

message Request {
    oneof message {
        SetTemporaryRxSpeedRequest setTemporaryRxSpeedRequest = 1;
    }
}

message SetTemporaryRxSpeedRequest {
    double speed = 1;
    int32 duration = 2;
}

message SetTemporaryRxSpeedResponse {
}

service ProxyService{
    rpc SetTemporaryRxSpeed(SetTemporaryRxSpeedRequest) returns (SetTemporaryRxSpeedResponse);
}